--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,8 +2,9 @@
     display: flex;
    width:90%;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     margin:100px auto;
+  
 }
 .about-left{
     flex-basis: 40%;
@@ -12,10 +13,11 @@
 }
 .about-right{
     flex-basis: 56%;
+      
   
 }
 .about_img{
-    width: 100%;
+   width: 100%;
     border-radius: 10px;
 }
 .play_icon{
@@ -28,12 +30,16 @@
     
 }
 .about h3{
+    margin-top: 0;
+    width:100%;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 40px;
     color:#212EA0;
 
 }
 .about h2{
+    width:100%;
+     font-weight: 700;
     font-size: 35px;
     color:#000F38;
     margin: 10px 0;
@@ -41,7 +47,10 @@
 
 }
 .about p{
+    width:100%;
     color: #676767;
     margin-bottom: 15px;
+    font-weight: 600;
+    font-size: 21px;
 
 }
