--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,7 +2,7 @@
     display: flex;
    width:90%;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: center;
     margin:100px auto;
   
 }
@@ -53,4 +53,18 @@
     font-weight: 600;
     font-size: 21px;
 
+}
+@media (max-width:850px){
+    .about{
+        flex-direction: column;
+    }
+    .about-left{
+        flex-basis: 100%;
+        margin:20px;
+        order:2;
+    }
+    .about-right{
+        flex-basis: 100%;
+       
+    }
 }
