--- a/src/components/Campus/Campus.css
+++ b/src/components/Campus/Campus.css
@@ -15,3 +15,11 @@
     width: 23%;
     border-radius: 10px;
 }
+@media (max-width:800px){
+    .gallery{
+        flex-wrap: wrap;
+    }
+    .gallery img{
+        width:48%;
+    }
+}
