--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,4 +1,4 @@
-.hero{
+.heros{
     background: linear-gradient(rgba(8,0,58,0.7),rgba(8,0,58,0.7)),url('../../assets/hero.png');
     min-height: 100vh;
     width:100%;
@@ -28,4 +28,20 @@
     line-height:1.4;
    
 
+}
+@media (max-width:850px){
+    .hero-text h1{
+        font-size: 40px;
+    }
+}
+@media (max-width:650px){
+    .hero-text h1{
+        font-size: 30px;
+        max-width:400px;
+        margin:auto;
+    }
+    .hero-text p{
+        font-size: 14px;
+        margin:15px auto 30px;
+    }
 }
