--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ a{
 .container{
  padding-left: 10px;
   padding-right: 10%;
+ 
 }
 .btn{
   background: #fff;
@@ -41,4 +42,13 @@ a{
 .btn.dark-btn{
   background:#212EA0 ;
   color:white
+}
+@media (max-width:1200px){
+  .container{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .btn{
+    padding:14px 22px;
+  }
 }
