--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,71 +1,60 @@
-.about{
-    display: flex;
-   width:90%;
-    justify-content: space-between;
-    align-items: center;
-    margin:100px auto;
-    
-  
+.about {
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
+  align-items: center;
+  margin: 100px auto;
 }
-.about-left{
-    flex-basis: 40%;
-    position: relative;
-    
+.about-left {
+  flex-basis: 40%;
+  position: relative;
 }
-.about-right{
-    flex-basis: 56%;
-      
-  
+.about-right {
+  flex-basis: 56%;
 }
-.about_img{
-   width: 100%;
-    border-radius: 10px;
+.about_img {
+  width: 100%;
+  border-radius: 10px;
 }
-.play_icon{
-    width: 60px;
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    
-    
+.play_icon {
+  width: 60px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.about h3{
-    margin-top: 0;
-    width:100%;
-    font-weight: 600;
-    font-size: 40px;
-    color:#212EA0;
-
+.about h3 {
+  margin-top: 0;
+  width: 100%;
+  font-weight: 600;
+  font-size: 40px;
+  color: #212ea0;
 }
-.about h2{
-    width:100%;
-     font-weight: 700;
-    font-size: 35px;
-    color:#000F38;
-    margin: 10px 0;
-    max-width:400px;
-
+.about h2 {
+  width: 100%;
+  font-weight: 700;
+  font-size: 35px;
+  color: #000f38;
+  margin: 10px 0;
+  max-width: 400px;
 }
-.about p{
-    width:100%;
-    color: #676767;
-    margin-bottom: 15px;
-    font-weight: 600;
-    font-size: 21px;
-
+.about p {
+  width: 100%;
+  color: #676767;
+  margin-bottom: 15px;
+  font-weight: 600;
+  font-size: 21px;
 }
-@media (max-width:850px){
-    .about{
-        flex-direction: column;
-    }
-    .about-left{
-        flex-basis: 100%;
-        margin:20px;
-        order:2;
-    }
-    .about-right{
-        flex-basis: 100%;
-       
-    }
+@media (max-width: 850px) {
+  .about {
+    flex-direction: column;
+  }
+  .about-left {
+    flex-basis: 100%;
+    margin: 20px;
+    order: 2;
+  }
+  .about-right {
+    flex-basis: 100%;
+  }
 }
