--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -1,55 +1,51 @@
-.programs{
-    margin:80px auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 90%;
-   
+.programs {
+  margin: 80px auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
 }
-.program img{
-    width:100%;
-    border-radius:10px;
-    display: block;
-    
-
+.program img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
 }
-.program{
-    flex-basis: 31%;
-    position: relative;
+.program {
+  flex-basis: 31%;
+  position: relative;
 }
-.caption{
-    border-radius: 10px;
-    position:absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom: 0;
-    background: rgba(0,15,152,0.3);
-    display: flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content: center;
-    color:#fff;
-    opacity:0;
-    cursor: pointer;
-    padding-top: 70%;
-    transition: 0.4s;
+.caption {
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 15, 152, 0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  opacity: 0;
+  cursor: pointer;
+  padding-top: 70%;
+  transition: 0.4s;
 }
-.caption img{
-    width:60px;
-    margin-bottom:10px;
-    
+.caption img {
+  width: 60px;
+  margin-bottom: 10px;
 }
-.program:hover .caption{
-    opacity: 1;
-    padding-top: 0;
+.program:hover .caption {
+  opacity: 1;
+  padding-top: 0;
 }
-@media (max-width:650px){
-    .programs{
-        flex-direction: column;
-    }
-    .program{
-        flex-basis: 100%;
-        margin:20px
-    }
+@media (max-width: 650px) {
+  .programs {
+    flex-direction: column;
+  }
+  .program {
+    flex-basis: 100%;
+    margin: 20px;
+  }
 }
