--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,14 +1,14 @@
-.title{
-    text-align: center;
-    margin:20px 0px 30px;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 20px;
-    color:#212EA0
+.title {
+  text-align: center;
+  margin: 20px 0px 30px;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 20px;
+  color: #212ea0;
 }
-.title h2{
-    text-transform: none;
-    color:#000F38;
-    margin-top: 5px;
-    font-size: 32px;
+.title h2 {
+  text-transform: none;
+  color: #000f38;
+  margin-top: 5px;
+  font-size: 32px;
 }
