--- a/src/components/VideoPlayer/VideoPlayer.css
+++ b/src/components/VideoPlayer/VideoPlayer.css
@@ -1,22 +1,22 @@
-.video-player{
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width:100%;
-    background: rgba(0,0,0,0.9);
-    z-index: 100;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.video-player {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.video-player video{
-    width: 90%;
-    max-width: 900px;
-    height:auto;
-    border: 4px solid #fff;
+.video-player video {
+  width: 90%;
+  max-width: 900px;
+  height: auto;
+  border: 4px solid #fff;
 }
 
-    .video-player.hide{
-    display: none;
+.video-player.hide {
+  display: none;
 }
