--- a/src/index.css
+++ b/src/index.css
@@ -1,55 +1,51 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
-
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Outfit", sans-serif;
 }
-body{
-  background: #F5F5F5;
+body {
+  background: #f5f5f5;
 }
-a{
+a {
   text-decoration: none;
   color: inherit;
   line-height: 1;
   cursor: pointer;
 }
-.container{
- padding-left: 10px;
+.container {
+  padding-left: 10px;
   padding-right: 10px;
-  
- 
 }
-.btn{
+.btn {
   background: #fff;
   color: #212121;
-  padding:14px 25px;
+  padding: 14px 25px;
   border-radius: 30px;
-  padding:10px 12px;
+  padding: 10px 12px;
   cursor: pointer;
-  border:0;
-  outline:0;
+  border: 0;
+  outline: 0;
   display: inline-flex;
   align-items: center;
   justify-content: center;
 }
-.btn img{
-  width:20px;
+.btn img {
+  width: 20px;
   margin-left: 15px;
 }
-.btn.dark-btn{
-  background:#212EA0 ;
-  color:white
+.btn.dark-btn {
+  background: #212ea0;
+  color: white;
 }
-@media (max-width:1200px){
-  .container{
+@media (max-width: 1200px) {
+  .container {
     padding-left: 5%;
     padding-right: 5%;
   }
-  .btn{
-    padding:14px 22px;
+  .btn {
+    padding: 14px 22px;
   }
 }
